--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "maatwebsite/excel": "^3.1",
-        "milon/barcode": "^9.0",
+        "picqer/php-barcode-generator": "^2.2",
         "psr/simple-cache": "1.0",
         "yajra/laravel-datatables": "^1.5"
     },
